--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url(styles/header.css);
 @import url(styles/banner.css);
 @import url(styles/carrossel.css);
+@import url(styles/topico.css);
+@import url(styles/footer.css);
 :root {
     --cor-de-fundo: #EBECEE;
     --cor-branca: #FFF;
