--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --font-principal: 'Poppins';
     --azul: #002F52;
+    --font-secundaria: 'Josefin Sans';
+    --preto: #000;
+    --cinza: #858585;
+    --cinza-secundario: #474646;
 }
 body {
     background-color: var(--cor-de-fundo);
