--- a/styles/banner.css
+++ b/styles/banner.css
@@ -28,3 +28,15 @@
     background: url(../img/lupa.png) no-repeat;
     background-position: 0.8em;
 }
+@media screen and (min-width: 1024px) {
+    .banner-titulo {
+        font-size: 36px;
+    }
+    .botao-pesquisa {
+        width: 50%;
+    }
+    .botao-pesquisa::placeholder {
+        font-size: 16px;
+        background-position: 4em;
+    }
+}
