--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -62,3 +62,23 @@
 .estrelas {
     margin-bottom: 1em;
 }
+@media screen and (min-width: 1024px) {
+    .titulo-carrossel {
+        font-size: 26px;
+    }
+    .swiper-pagination {
+        margin: 2em 0;
+    }
+    .swiper {
+        width: 60%;
+    }
+    .card {
+        width: 45%;
+        margin: 2em auto;
+    }
+    .swiper-button-prev, 
+.swiper-button-next {
+    display: block;
+    top: 60%;
+}
+}
