--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -82,3 +82,20 @@
     top: 60%;
 }
 }
+@media screen and (min-width: 1728px) {
+    .container-carrossel {
+        display: flex;
+        align-items: center;
+        margin-bottom: 3em;
+    }
+    .swiper {
+        width: 40vw;
+    }
+    .card {
+        width: 40vw;
+        margin-top: auto;
+    }
+    .titulo-carrossel {
+        font-size: 32px;
+    }
+}
