--- a/styles/footer.css
+++ b/styles/footer.css
@@ -36,6 +36,9 @@ footer {
 .-footer-lista {
     display: none;
 }
+.-inicio-rodape {
+    padding: 2em;
+}
 
 @media screen and (min-width: 1024px) {
     .-inicio-rodape {
@@ -79,4 +82,15 @@ footer {
     .footer-titulo1 {
         font-size: 24px;
     }
+}
+@media screen and (min-width: 1728px) {
+    .-inicio-rodape {
+        width: 65vw;
+        margin: auto;
+    }
+    .footer-lista {
+        border-left: 1px solid var(--cinza-secundario);
+        padding-left: 1em;
+    }
+    
 }
